# conftest-policies

./: .commitlintrc.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .tool-versions  .yamlfmt  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cliff.toml  pyproject.toml  release-please-config.json  renovate.json  zensical.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  cliff.toml  commitlint.config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  enhancement.yml  policy_request.yml
.github/workflows/: ci.yml  commitlint.yml  deploy.yml  release-please.yml
docs/: POLICIES.md  index.md
docs/changelogs/: README.md  hcl.md  plan.md  terraform.md
policy/terraform/aws/: s3.rego  s3_test.rego
policy/terraform/hcl/aws/: s3.rego  s3_test.rego
policy/terraform/lib/: tags.rego  tags_test.rego
policy/terraform/plan/aws/: s3.rego  s3_test.rego
scripts/: gen-docs.sh  gen-scope-changelogs.sh  generate-plan.sh  test-fixtures.sh
tests/fixtures/terraform/aws/s3/: README.md  main.tf
tests/fixtures/terraform/hcl/aws/s3/compliant/: main.tf
tests/fixtures/terraform/hcl/aws/s3/violation/: main.tf
tests/fixtures/terraform/plan/aws/s3/compliant/: main.tf
tests/fixtures/terraform/plan/aws/s3/violation/: main.tf
