[project]
name = "conftest-policies-docs"
version = "0.0.0"
description = "Zensical docs site for the conftest-policies repo."
readme = "README.md"
requires-python = ">=3.14.5"
license = { file = "LICENSE" }
authors = [{ name = "RemoteRabbit" }]

dependencies = [
    "zensical==0.0.44",
    "pymdown-extensions>=10.21.3,<12.0",
]

[tool.uv]
package = false
